Fix spacing

--- a/src/FooterComponent/Footer.module.css
+++ b/src/FooterComponent/Footer.module.css
@@ -8,3 +8,9 @@
     text-decoration: none;
     float: right;
 }
+
+.footerMobile {
+    padding: 0 !important;
+    margin-right: 24px;
+    margin-top: 24px;
+}
